# Loxo

./: CMakeLists.txt  README.md
include/: color.hpp  curser.hpp  dbgPrinter.hpp  keyCodes.hpp  loxo.hpp  prompt.hpp  recollection.hpp
src/: color.cpp  curser.cpp  prompt.cpp  recollection.cpp
test/: main.cpp
